# function-alchemy

./: .gitignore  README.md  pyproject.toml  test_setup.py
src/function_alchemy/data/: k8s_data_generator.py  k8s_functions_config.py  loader.py
src/function_alchemy/data/generator/: generator.py  training_data_20250205_085407.json  training_data_20250205_090357.json  training_data_20250205_091707.json
src/function_alchemy/data/training/: cluster_operations.json  training_examples.json
src/function_alchemy/models/: test_model.py  train.py
src/function_alchemy/training/: test_base_model.py  test_model.py  train.py  train_mac.py  train_pc.py  train_pc_o3.py
src/function_alchemy/utils/: paths.py
